# hsbgsim

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  todo.yml
data/: bg_entities_all.json
examples/: custom_board.rs  full_random.rs  full_xy.rs  print_run_snapshot.rs
hsbgsim_codegen/: Cargo.toml  README.md
hsbgsim_codegen/src/: main.rs
pre_commit_checks/: Cargo.toml
pre_commit_checks/src/: main.rs
src/: battleground.rs  board.rs  game.rs  hand.rs  hero.rs  lib.rs  player.rs
src/events/: activate_effect.rs  after_attack.rs  attack.rs  aura_update.rs  death.rs  death_check.rs  destroy.rs  end.rs  mod.rs  propose_attack.rs  remove.rs  stat_buff.rs  summon.rs  take_damage.rs
src/minions/: abilities.rs  minion_instance.rs  minion_type.rs  mod.rs
tests/: basic.rs  run.nu  snapshot_tests.rs
tests/snapshots/: snapshot_tests__random_board_outcomes.snap  snapshot_tests__random_board_snapshot_0.snap  snapshot_tests__random_board_snapshot_0.snap.new  snapshot_tests__random_board_snapshot_1.snap  snapshot_tests__random_board_snapshot_1.snap.new  snapshot_tests__random_board_snapshot_10.snap  snapshot_tests__random_board_snapshot_10.snap.new  snapshot_tests__random_board_snapshot_100.snap  snapshot_tests__random_board_snapshot_101.snap  snapshot_tests__random_board_snapshot_102.snap  snapshot_tests__random_board_snapshot_102.snap.new  snapshot_tests__random_board_snapshot_103.snap  snapshot_tests__random_board_snapshot_103.snap.new  snapshot_tests__random_board_snapshot_104.snap  snapshot_tests__random_board_snapshot_104.snap.new  snapshot_tests__random_board_snapshot_105.snap  snapshot_tests__random_board_snapshot_106.snap  snapshot_tests__random_board_snapshot_107.snap  snapshot_tests__random_board_snapshot_108.snap  snapshot_tests__random_board_snapshot_108.snap.new  snapshot_tests__random_board_snapshot_109.snap  snapshot_tests__random_board_snapshot_109.snap.new  snapshot_tests__random_board_snapshot_11.snap  snapshot_tests__random_board_snapshot_11.snap.new  snapshot_tests__random_board_snapshot_110.snap  snapshot_tests__random_board_snapshot_110.snap.new  snapshot_tests__random_board_snapshot_111.snap  snapshot_tests__random_board_snapshot_111.snap.new  snapshot_tests__random_board_snapshot_112.snap  (+497 more)
(+411 files in other folders)
