[workspace]
members = ["hsbgsim_codegen"]

[package]
name = "hsbgsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.6"
slotmap = "1.0"
bitmaps = "3.2"
rand = "0.8.5"
thiserror = "1.0"
automod = "1.0"
paste = "1.0"
strum = { version = "0.25", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
prettyplease = "0.2.15"
heck = "0.4.1"
