[workspace]
members = ["hsbgsim_codegen"]

[package]
name = "hsbgsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.6"
slotmap = { version = "1.0", features = ["serde"] }
bitmaps = "3.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
thiserror = "1.0"
automod = "1.0"
paste = "1.0"
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
test-case = "3.2.1"
