[workspace]
members = ["hsbgsim_codegen", "pre_commit_checks"]

[package]
name = "hsbgsim"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[dependencies]
tinyvec = "1.6"
slotmap = { version = "1.0", features = ["serde"] }
bitmaps = "3.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
thiserror = "1.0"
automod = "1.0"
paste = "1.0"
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
test-case = "3.2.1"
pretty_assertions = "1.4.0"
